 * Changed "template_id" option in page generation to "template"

2008-01-16 cjg
 * Added admin screen to reload config. Same as epadmin reload.
 * Added method to Repository to test if the current configuration is valid.
 * Added a missing \n to a errror message in Repository.pm

2008-01-16 cjg
 * Minor tweak to supress undef warning in Language.pm. Fixes #3199

2008-01-16 tdb
 * Overhauled Import plugins to use a Handler mechanism to output errors,
    warnings and object parse/creation events (should be transparent to the
	actual plugins), fixing #3206, #2812, #3205

2008-01-16 cjg
 * Added riched syntax to user role specification
 * Added web-based configuration editing (needs to have "config" option added
    to a role to activate it)

2008-01-16 cjg
 * Added "volatile" flag to fields to indicate that the last modified should
    not be reset, the revision number increased nor the XML file snapshotted
    on account of a change to this field. It still causes the abstract page
    to be updated and the field to be indexed. Closes #3221

2008-01-16 cjg
 * Can now do sub-object searches on indexed fields. Fixing #3188

2008-01-16 cjg
 * Workflows now assign ID's to component level elements when the file is
    loaded rather than ad-hoc. This fixes #3216.

2008-01-17 tdb
 * Fixed a problem with parsing BibTeX names that contained braces
 * Change OAI record headers to use yyyy-mm-dd, fixing #3227
 * Keep the data from a Test import, fixing #3134
 * Don't exit on bad XML when using render_xhtml_field, fixing #3147
 * Added Microsoft Excel document format, fixing #3217
 * Using a pin with content twice will no longer repeat content, fixing #3027

2008-01-17 cjg
 * Fixed a small bug in the Update::Static code which didn't work for .html
    files. or index.html files being called "/"
 
2008-01-17 cjg
 * Added an "id" attribute to <select> fields, which means that they can be
    found with prototype $F() method -- fixing some issues with autocomplete.